fixed build run bug